+[UP] Daily Commit; Add NGUI View related logic

--- a/Assets/Views/TestuGUIView.xml
+++ b/Assets/Views/TestuGUIView.xml
@@ -1,6 +1,6 @@
-<TestView xmlns="NUXML">
+<TestuGUIView xmlns="NUXML">
   <UserInterface>
     <Button Text="Play" Click="StartGame" />
   </UserInterface>
   <EventSystem />
-</TestView>
+</TestuGUIView>
